--- a/site/landing/src/css/custom.css
+++ b/site/landing/src/css/custom.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Manrope:wght@700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=EB+Garamond:wght@500;600;700&display=swap");
 
 :root {
   --ifm-color-primary: #0f6ad9;
@@ -6,7 +6,7 @@
   --ifm-color-primary-light: #1e7ceb;
   --ifm-background-color: #f7f8fa;
   --ifm-font-family-base: "IBM Plex Sans", sans-serif;
-  --ifm-heading-font-family: "Manrope", sans-serif;
+  --ifm-heading-font-family: "EB Garamond", serif;
   --ifm-link-color: #0f6ad9;
   --ifm-navbar-background-color: rgba(255, 255, 255, 0.92);
   --ifm-footer-background-color: #102033;
